--- a/App/settings.html
+++ b/App/settings.html
@@ -8,10 +8,45 @@
   <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    body, #root { -webkit-app-region: no-drag; }
+    /* Resize handles */
+    #resize-right { position: fixed; right: 0; top: 0; width: 6px; height: 100%; cursor: ew-resize; -webkit-app-region: no-drag; }
+    #resize-corner { position: fixed; right: 0; bottom: 0; width: 14px; height: 14px; cursor: nwse-resize; -webkit-app-region: no-drag; }
+  </style>
 </head>
 <body class="bg-gray-800">
   <div id="root"></div>
   <script type="text/babel" data-presets="typescript,react" src="/settings.tsx"></script>
+  <div id="resize-right"></div>
+  <div id="resize-corner"></div>
+  <script>
+    (function(){
+      const apiBase = 'http://127.0.0.1:5001';
+      function bindHandle(el, corner){
+        if(!el) return;
+        el.addEventListener('mousedown', function(e){
+          e.preventDefault();
+          const startX = e.clientX;
+          const startY = e.clientY;
+          const startW = window.innerWidth;
+          const startH = window.innerHeight;
+          function onMove(ev){
+            const dw = ev.clientX - startX;
+            const dh = ev.clientY - startY;
+            const nw = Math.max(800, startW + dw);
+            const nh = corner ? Math.max(600, startH + dh) : startH;
+            fetch(apiBase + '/window/resize', { method: 'POST', headers: { 'Content-Type': 'application/json' }, body: JSON.stringify({ width: nw, height: nh }) });
+          }
+          function onUp(){ window.removeEventListener('mousemove', onMove); window.removeEventListener('mouseup', onUp); }
+          window.addEventListener('mousemove', onMove);
+          window.addEventListener('mouseup', onUp);
+        });
+      }
+      bindHandle(document.getElementById('resize-right'), false);
+      bindHandle(document.getElementById('resize-corner'), true);
+    })();
+  </script>
 </body>
 </html>
 
